# micro-example-fastapi-app

./: README.md  app.py  main.py  pyproject.toml  templating.py
rest/: __init__.py  main.py
rest/items/: schemas.py  storage.py  views.py
templates/: base.html  home.html
